# backend/src/controllers/ProfileController.ts
@@ -1,4 +1,4 @@
-import { Request, Response, NextFunction } from 'express';
+import { NextFunction, Request, Response } from 'express';
 import { prisma } from '../../prisma/client';
 import redisClient from '../utils/redis';
 
@@ -9,10 +9,9 @@ export async function getProfile(
 	response: Response,
 	next: NextFunction
 ) {
-	const ngo_id: string = request.headers.authorization!;
-
 	try {
-		const incidents: object = await prisma.incident.findMany({
+		const ngo_id: string = request.headers.authorization!;
+		const incidents = await prisma.incident.findMany({
 			where: {
 				ngoId: ngo_id
 			}
@@ -26,8 +25,8 @@ export async function getProfile(
 			return response.status(200).json(JSON.parse(data));
 		} else {
 			redisClient.setEx(ngo_id, default_expiration, JSON.stringify(incidents));
-			next();
 		}
+
 		return response.status(200).json(incidents);
 	} catch (err: unknown) {
 		return response.status(400).json(err);
